--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -36,6 +36,11 @@ ovt-editor {
   width: 100%;
 }
 
+.ovt-placeholder {
+  height: 100%;
+  width: 100%;
+}
+
 ovt-console {
   display: none;
   flex: 1 1;
