--- a/src/app/shared/monaco-editor/monaco-editor.component.html
+++ b/src/app/shared/monaco-editor/monaco-editor.component.html
@@ -3,7 +3,7 @@
   <ngx-monaco-editor
     [options]="editorOptions"
     [(ngModel)]="content"
-    (ngModelChange)="onChange($event)"
+    (ngModelChange)="onChange()"
     (onInit)="onEditorInit($event)">
   </ngx-monaco-editor>
 
